--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,3 @@
 random_forest_model.pkl filter=lfs diff=lfs merge=lfs -text
+*.pkl filter=lfs diff=lfs merge=lfs -text
+*.ipynb filter=lfs diff=lfs merge=lfs -text
